# MilterSeparator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DB.TXT  LICENSE  MEMO.TXT  README.ja-jp.utf-8.md  README.md
etc/: MilterSeparator.conf.sample
etc/MilterSeparator.d/: Parameter.conf.sample
etc/MilterSeparator.d/templates/: DownloadInfoHeadTemplate.txt  DownloadInfoTailTemplate.txt  DownloadInfoTextTemplate.txt  counter_template.cgi  download_template.html
src/: client.rs  db.rs  download.rs  init.rs  logging.rs  main.rs  milter.rs  parse.rs  zipper.rs
systemd/: milter_separator.service
