
[package]
name = "milter_separator"
version = "0.1.0"
edition = "2024"
authors = ["T.Kabu <kabu@fvg-on.net>"]
description = "A high-performance Rust implementation of a Milter protocol server for MIME email parsing and analysis"
license = "MIT"
keywords = ["milter", "email", "mime", "smtp", "postfix"]
categories = ["email", "network-programming", "parsing"]
readme = "README.md"

[dependencies]
# Tokioランタイム（フル機能を使うためにfullを指定）
tokio = { version = "1.47", features = ["full"] }

# 日時・タイムゾーン処理用
chrono = "0.4"
chrono-tz = "0.8"

# MIME/メールパーサ
mail-parser = "0.11"
mailparse = "0.13"

# 文字正規化（必要に応じて使用）
unicode-normalization = "0.1"
rand = "0.8"
tempfile = "3.5"
zip = "8.1"
base64 = "0.21"
encoding_rs = "0.8"
uuid = { version = "1.21", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
hmac = "0.12"
sha2 = "0.10"
hyper = "1.8"
bcrypt = "0.14"
rusqlite = { version = "0.29", features = ["bundled"] }
mysql = "27.0"
tokio-postgres = "0.7"